--- a/Jogo da nave JS/jogoDaNave.html
+++ b/Jogo da nave JS/jogoDaNave.html
@@ -17,12 +17,13 @@
         Planeta
         <div id="medidorPlaneta">
             <div id="barraPlaneta"></div>
-            <div id="contBombas"></div>
+            <div id="contBombas"></div> 
         </div>
         <div id="naveJog" class="navJog"></div>
         <div id="telaMsg" class="telaMsg">
             <button id="btnJogar" class="btnJogar">Jogar</button>
         </div>
     </div>
+    <h3 id="mensagem">Use as <b>setas</b> para mover a nave e <b>espaço</b> para atirar</h3>
 </body>
 </html>
